<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/parent_vertical_margin"
        android:paddingLeft="@dimen/parent_horizontal_margin"
        android:paddingRight="@dimen/parent_horizontal_margin"
        android:paddingTop="@dimen/parent_vertical_margin">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_input"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:text="@string/topping"
            android:textAllCaps="true"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:text="@string/whipped_cream"
            android:textSize="@dimen/font_size"
            android:paddingLeft="@dimen/padding_24" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:text="@string/chocolate"
            android:textSize="@dimen/font_size"
            android:paddingLeft="@dimen/padding_24" />

        <TextView
            android:id="@+id/header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:text="@string/header1"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="@dimen/add_minus_button"
                android:layout_height="@dimen/add_minus_button"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/child_margin_right"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:text="@string/number"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="@dimen/add_minus_button"
                android:layout_height="@dimen/add_minus_button"
                android:layout_marginRight="@dimen/child_margin_right"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>